[package]
name = "qt-json-rs"
version = "0.0.0"
edition = "2021"
categories = ["json","qt"]
author = "Dominic Heun <dominic.heun@gmx.net>"
license = "BSD"
description = "JSON library for QT"
repository = "github.com/thedomen/qt-json-rs"

[features]
QJsonBigEndian = []

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
byteorder = "1.4.3"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"