[package]
name = "qt-json-rs"
version = "0.0.0"
edition = "2021"
categories = ["data-structures"]
author = "Dominic Heun <dominic.heun@gmx.net>"
license-file = "LICENSE"
description = "JSON library for QT"
repository = "https://github.com/thedome/qt-json-rs"
homepage = "https://github.com/thedome/qt-json-rs"
exclude = [".idea",".github"]


[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
byteorder = "1.4.3"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"